# multi-robot-mapping

./: .gitmodules  CollaborativeMappingusingUAVandQuadruped.md  README.md
cad/: LandingGear.3mf  LandingGear.stl  LandingGearRigid.stl  RealsenseBase.stl
go1_exploration/: CMakeLists.txt  package.xml
go1_exploration/config/: goal.rviz
go1_exploration/include/go1_exploration/: frontier_exploration.hpp
go1_exploration/launch/: exploration.launch.xml
go1_exploration/src/: frontier_exploration.cpp
images/: MRM.drawio
pi_mapping/: package.xml  setup.cfg  setup.py  setup2.py
pi_mapping/launch/: depthai.launch.py  rgb_depthai.launch.py  stereo_inertial_node.launch.py  urdf.launch.py
pi_mapping/urdf/: base_descr.urdf.xacro  depthai_descr.urdf.xacro
pi_mapping/urdf/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
remote_rtabmap/: package.xml  setup.cfg  setup.py
remote_rtabmap/config/: map.rviz
remote_rtabmap/launch/: custom_rgbd.launch.py  remote.launch.py  rt.launch.py
remote_rtabmap/urdf/: base_descr.urdf.xacro  depthai_descr.urdf.xacro
remote_rtabmap/urdf/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
rpi_control/: CMakeLists.txt  package.xml
rpi_control/launch/: offb_px4.launch.xml
rpi_control/rpi_control/: package.xml
rpi_control/rpi_control/scripts/: .UdpListener.py.swp
rpi_control/rpi_control/src/: manual_exploration.cpp
rpi_control/scripts/: UdpListener.py
rpi_control/src/: manual_exploration.cpp
rpi_interfaces/: CMakeLists.txt  package.xml
rpi_interfaces/srv/: ArmingControl.srv  Land.srv  Takeoff.srv  Trajectory.srv
scripts/: arm.sh  disarm.sh  land.sh  start_mapping.sh  start_offb.sh  takeoff.sh  trajectory.sh
