<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go1_exploration</name>
  <version>1.0.0</version>
  <description>Frontier exploration for Unitree Go1</description>
  <maintainer email="pushkardave.vnit@gmail.com">redhairedlynx</maintainer>
  <license>MIT</license>

  <depend>ros2_unitree_legged_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
